--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+    href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway|Righteous"
+    rel="stylesheet"
+  />
 
     <title>Compass Engineering</title>
   </head>
