--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway|Righteous"
     rel="stylesheet"
   />
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Compass Engineering</title>
   </head>
 
