--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,16 @@
   />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Compass Engineering</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-30X1CYNGG2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-30X1CYNGG2');
+    </script>
+
   </head>
 
   <body>
