--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
     rel="stylesheet"
   />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Compass Engineering</title>
-
+    <title>Compass Engineering – Independent Technical Service Company in Tirana, Albania</title>
+    <meta name="description" content="Compass Engineering is an Independent Technical Service Company in Albania that has expert knowledge and experience of Engineering Services, Design, Construction Supervision Expediting, Testing & Inspection, NDT, Welding and Welder Qualification, Integrity Evaluation, Painting and Coating, Procurement">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-30X1CYNGG2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
